[tool.poetry]
name = "shop-bot"
version = "0.1.0"
description = ""
authors = ["DFes"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
pytz = "^2024.2"
psycopg2-binary = "^2.9.10"
loguru = "^0.7.2"
aiogram = "2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
